<resources>
    <string name="app_name">CWatch</string>

    <string name="CLIENT_CHARACTERISTIC_CONFIG">00002902-0000-1000-8000-00805f9b34fb"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="shortcut_dfu_short">DFU</string>
    <string name="shortcut_dfu_long">Device Firmware Update</string>
    <string name="shortcut_uart_short">UART</string>
    <string name="shortcut_uart_long">Nordic UART Service</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="action_add_device">ADD DEVICE</string>
    <string name="action_connecting">CONNECTING…</string>
    <string name="action_disconnect">DISCONNECT</string>
    <string name="action_disconnecting">DISCONNECTING…</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_plugins">PLUGINS</string>
    <string name="drawer_plugin_nrf_connect">nRF Connect</string>

    <string name="battery">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - "</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="no_application">Web Browser application is not available.</string>
    <string name="no_uri_application">There is no application that can open this URI.</string>
    <string name="no_application_play">Google Play not installed.</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE CWATCH:</string>
    <string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth LE devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>

    <string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>

    <string name="baseUrl">http://api-c19.ap-south-1.elasticbeanstalk.com/
</string>

    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>

    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="paired">paired</string>
    <string name="select_device">Select a device</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="permission_denied">Permission denied</string>
    <string name="connect">Connect</string>
    <string name="not_connected">Not Connected</string>
    <string name="temperature_unknown">---°C</string>
    <string name="bluetooth_is_not_available">Bluetooth is not available</string>
    <string name="device_connected" formatted="false">%s - ready</string>
    <string name="notification_temperature">Temperature: </string>
    <string name="temperature_template">%.1f°C</string>
    <string name="temperature_service_not_found">Temperature Service not found! Disconnecting.</string>
    <string name="no_name_device">NoName device</string>
    <string name="rssi_value">Rssi = </string>
    <string name="device_connecting" formatted="false">%s - connecting</string>
    <string name="about_version">\\n\\nVersion: %s</string>


    <string name="about_title">About</string>

    <string name="about_text">The nRF Toolbox is a container application that stores your Nordic Semiconductor apps in one location.</string>
    <string name="bonding">Bonding with the device&#8230;</string>
    <string name="bonded">The device is now bonded.</string>
    <string name="bonding_failed">Bonding failed.</string>

    <string name="channel_connected_devices_title">Background connections</string>
    <string name="channel_connected_devices_description">Shows a notification when a device is connected in background.</string>
    <string name="channel_files_title">Files</string>
    <string name="channel_files_description">Shows notifications when new files has been saved.</string>
    <string name="channel_proximity_warnings_title">Proximity warnings</string>
    <string name="channel_proximity_warnings_description">Shows notifications when a proximity device got out of range.</string>
    <string name="uart_notification_connected_message"><![CDATA[<string name=\"uart_notification_connected_message\">%s is connected.</string>]]></string>
    <string name="scanBluetooth">Scan Bluetooth</string>
    <string name="login">Login</string>
    <string name="begin">Let\'s Begin !</string>
    <string name="begin_title">We will guide you to use this app .</string>
    <string name="begin_content">Please slide to the right for login and more details of getting interacted with us.</string>
    <string name="connect_heading">Connect Your Band With Mobile\'s Bluetooth.</string>
    <string name="connect_title">Tap on the button provided below and click on allow permission .</string>
    <string name="connect_content">Please connect the your respective watch and enter the password provided to you</string>
    <string name="mobile">Mobile Number Verification</string>
    <string name="mobile_title">Please tap on the login button and enter your mobile number as well as verification code sent to you</string>
    <string name="sign_content">You will be directed to signUp form then ,please enter all the asked details and then press on button provided there</string>
    <string name="welcome">Welcome! Please enter your details.</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="quarantine_type">Type of Quarantine</string>
    <string name="home_quar">Home/Self Quarantine</string>
    <string name="isolation_quar">Government Quarantine</string>
    <string name="address">Address</string>
    <string name="enter_bluetooth">Enter bluetooth id</string>
    <string name="submit">Submit</string>
    <string name="recent_temp">Recent Temperature (F)</string>
    <string name="recent_tempC">Recent Temperature (C)</string>
    <string name="Start_Timer">Start timer to fetch my location</string>
    <string name="current_location">Current Location</string>
    <string name="geofence">Geofence</string>
    <string name="open_geofence">Open Geofence</string>
    <string name="location_updates">Update my location</string>
    <string name="temp_history">Temperature History</string>
    <string name="info">Info</string>
    <string name="notif_content">No Notification for now.</string>
    <string name="notif">Notifications</string>
    <string name="device_name">Device Name:--</string>
    <string name="bluetooth_id">Bluetooth Id: --</string>
    <string name="signup">SignUp Form</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="how_to_use">How To Use</string>
    <string name="title_activity_maps">Map</string>
    <string name="geofence_dialog">You are being directed to geofence activity.If you find that your location shown with red pointer is not correct,then please wait for some time and move your phone a bit. As soon as your pointer is on correct location you can use one time feature to change your geofence location by using the create geofence button in your action bar on the top.</string>
    <string name="btn_enter">Enter</string>
    <string name="verify_code_content">Enter the six digit verification code sent to your mobile.</string>
    <string name="verify_code">Verification Code</string>
    <string name="uart_notification_action_disconnect">Disconnected</string>


</resources>
