<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/battery"
        android:ellipsize="end"
        android:freezesText="true"
        android:maxLines="1"
        android:text="@string/device_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_actionbar"
        tools:layout_editor_absoluteY="32dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uartMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="Message will appear here"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_connect"
        style="@style/Widget.Connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:onClick="onConnectClicked"
        android:text="@string/action_connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/bluetoothID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/bluetooth_id"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_name" />

    <TextView
        android:id="@+id/battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@drawable/battery"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/not_available"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/device_name_uart"
        app:layout_constraintEnd_toStartOf="@+id/device_name_uart" />
</androidx.constraintlayout.widget.ConstraintLayout>